Replace XLR w/ XCRC

--- a/contrib/debian/manpages/solaris.conf.5
+++ b/contrib/debian/manpages/solaris.conf.5
@@ -1,4 +1,4 @@
-.TH XLR.CONF "5" "January 2011" "cryptocrowd.conf 3.19"
+.TH XCRC.CONF "5" "January 2011" "cryptocrowd.conf 3.19"
 .SH NAME
 cryptocrowd.conf \- cryptocrowd configuration file
 .SH SYNOPSIS
